[ADD] static template home (live updates, top 3 result, social media buttons) and css contingents-flag-2x spacing-fix

--- a/client/main.scss
+++ b/client/main.scss
@@ -398,3 +398,13 @@ $column-gap: 0px;
     width: 25px;
     height: 25px;
 }
+
+.contingents-flag-2x {
+    width: 50px;
+    height: 50px;
+}
+
+.spacing-fix {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
